compiler/parser/ClusterParser.py
# Generated from compiler/Cluster.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ClusterParser ( Parser ):

    grammarFileName = "Cluster.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'use'", "'else'", "'func'", "'while'", 
                     "'return'", "<INVALID>", "<INVALID>", "'''", "<INVALID>", 
                     "<INVALID>", "'nil'", "<INVALID>", "<INVALID>", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'&&'", "'||'", "'!'", "'.'", 
                     "','", "'='", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'->'" ]

    symbolicNames = [ "<INVALID>", "IF", "USE", "ELSE", "FUNC", "WHILE", 
                      "RETURN", "INT", "FLOAT", "APOSTROPHE", "STRING", 
                      "BOOL", "NIL", "ID", "HEX", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "EEQ", "NEQ", "GT", "LT", "GTE", "LTE", "AND", 
                      "OR", "NOT", "DOT", "COMMA", "ASSIGN", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "RETURNS", 
                      "COMMENT", "WHITESPACE" ]

    RULE_parse = 0
    RULE_type = 1
    RULE_stmt = 2
    RULE_bodyStmts = 3
    RULE_body = 4
    RULE_ifStmt = 5
    RULE_elseifStmt = 6
    RULE_elseStmt = 7
    RULE_whileStmt = 8
    RULE_useStmt = 9
    RULE_funcAssign = 10
    RULE_varAssign = 11
    RULE_arg = 12
    RULE_args = 13
    RULE_param = 14
    RULE_params = 15
    RULE_call = 16
    RULE_atom = 17
    RULE_expr = 18

    ruleNames =  [ "parse", "type", "stmt", "bodyStmts", "body", "ifStmt", 
                   "elseifStmt", "elseStmt", "whileStmt", "useStmt", "funcAssign", 
                   "varAssign", "arg", "args", "param", "params", "call", 
                   "atom", "expr" ]

    EOF = Token.EOF
    IF=1
    USE=2
    ELSE=3
    FUNC=4
    WHILE=5
    RETURN=6
    INT=7
    FLOAT=8
    APOSTROPHE=9
    STRING=10
    BOOL=11
    NIL=12
    ID=13
    HEX=14
    ADD=15
    SUB=16
    MUL=17
    DIV=18
    MOD=19
    EEQ=20
    NEQ=21
    GT=22
    LT=23
    GTE=24
    LTE=25
    AND=26
    OR=27
    NOT=28
    DOT=29
    COMMA=30
    ASSIGN=31
    LPAREN=32
    RPAREN=33
    LBRACE=34
    RBRACE=35
    LBRACK=36
    RBRACK=37
    RETURNS=38
    COMMENT=39
    WHITESPACE=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ClusterParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClusterParser.StmtContext)
            else:
                return self.getTypedRuleContext(ClusterParser.StmtContext,i)


        def getRuleIndex(self):
            return ClusterParser.RULE_parse

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = ClusterParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4563434934) != 0):
                self.state = 38
                self.stmt()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(ClusterParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ClusterParser.ID)
            else:
                return self.getToken(ClusterParser.ID, i)

        def LBRACK(self):
            return self.getToken(ClusterParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(ClusterParser.RBRACK, 0)

        def getRuleIndex(self):
            return ClusterParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = ClusterParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(ClusterParser.ID)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 47
                self.match(ClusterParser.LBRACK)
                self.state = 48
                self.match(ClusterParser.ID)
                self.state = 49
                self.match(ClusterParser.RBRACK)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varAssign(self):
            return self.getTypedRuleContext(ClusterParser.VarAssignContext,0)


        def funcAssign(self):
            return self.getTypedRuleContext(ClusterParser.FuncAssignContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(ClusterParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(ClusterParser.WhileStmtContext,0)


        def useStmt(self):
            return self.getTypedRuleContext(ClusterParser.UseStmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(ClusterParser.ExprContext,0)


        def getRuleIndex(self):
            return ClusterParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = ClusterParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.varAssign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.funcAssign()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.ifStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.whileStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.useStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyStmtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(ClusterParser.StmtContext,0)


        def RETURN(self):
            return self.getToken(ClusterParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(ClusterParser.ExprContext,0)


        def getRuleIndex(self):
            return ClusterParser.RULE_bodyStmts

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBodyStmts" ):
                return visitor.visitBodyStmts(self)
            else:
                return visitor.visitChildren(self)




    def bodyStmts(self):

        localctx = ClusterParser.BodyStmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bodyStmts)
        try:
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 4, 5, 7, 8, 10, 11, 12, 13, 14, 28, 32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.stmt()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(ClusterParser.RETURN)
                self.state = 62
                self.expr(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(ClusterParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ClusterParser.RBRACE, 0)

        def bodyStmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClusterParser.BodyStmtsContext)
            else:
                return self.getTypedRuleContext(ClusterParser.BodyStmtsContext,i)


        def getRuleIndex(self):
            return ClusterParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = ClusterParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(ClusterParser.LBRACE)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4563434998) != 0):
                self.state = 66
                self.bodyStmts()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(ClusterParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ClusterParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(ClusterParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(ClusterParser.BodyContext,0)


        def elseifStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClusterParser.ElseifStmtContext)
            else:
                return self.getTypedRuleContext(ClusterParser.ElseifStmtContext,i)


        def elseStmt(self):
            return self.getTypedRuleContext(ClusterParser.ElseStmtContext,0)


        def getRuleIndex(self):
            return ClusterParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = ClusterParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(ClusterParser.IF)
            self.state = 75
            self.expr(0)
            self.state = 76
            self.body()
            self.state = 80
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 77
                    self.elseifStmt() 
                self.state = 82
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 83
                self.elseStmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseifStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(ClusterParser.ELSE, 0)

        def IF(self):
            return self.getToken(ClusterParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(ClusterParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(ClusterParser.BodyContext,0)


        def getRuleIndex(self):
            return ClusterParser.RULE_elseifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseifStmt" ):
                return visitor.visitElseifStmt(self)
            else:
                return visitor.visitChildren(self)




    def elseifStmt(self):

        localctx = ClusterParser.ElseifStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elseifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(ClusterParser.ELSE)
            self.state = 87
            self.match(ClusterParser.IF)
            self.state = 88
            self.expr(0)
            self.state = 89
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(ClusterParser.ELSE, 0)

        def body(self):
            return self.getTypedRuleContext(ClusterParser.BodyContext,0)


        def getRuleIndex(self):
            return ClusterParser.RULE_elseStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseStmt" ):
                return visitor.visitElseStmt(self)
            else:
                return visitor.visitChildren(self)




    def elseStmt(self):

        localctx = ClusterParser.ElseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elseStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(ClusterParser.ELSE)
            self.state = 92
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(ClusterParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(ClusterParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(ClusterParser.BodyContext,0)


        def getRuleIndex(self):
            return ClusterParser.RULE_whileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = ClusterParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(ClusterParser.WHILE)
            self.state = 95
            self.expr(0)
            self.state = 96
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(ClusterParser.USE, 0)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(ClusterParser.STRING)
            else:
                return self.getToken(ClusterParser.STRING, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ClusterParser.COMMA)
            else:
                return self.getToken(ClusterParser.COMMA, i)

        def getRuleIndex(self):
            return ClusterParser.RULE_useStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseStmt" ):
                return visitor.visitUseStmt(self)
            else:
                return visitor.visitChildren(self)




    def useStmt(self):

        localctx = ClusterParser.UseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_useStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(ClusterParser.USE)
            self.state = 99
            self.match(ClusterParser.STRING)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 100
                self.match(ClusterParser.COMMA)
                self.state = 101
                self.match(ClusterParser.STRING)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(ClusterParser.FUNC, 0)

        def ID(self):
            return self.getToken(ClusterParser.ID, 0)

        def LPAREN(self):
            return self.getToken(ClusterParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ClusterParser.RPAREN, 0)

        def body(self):
            return self.getTypedRuleContext(ClusterParser.BodyContext,0)


        def params(self):
            return self.getTypedRuleContext(ClusterParser.ParamsContext,0)


        def RETURNS(self):
            return self.getToken(ClusterParser.RETURNS, 0)

        def type_(self):
            return self.getTypedRuleContext(ClusterParser.TypeContext,0)


        def getRuleIndex(self):
            return ClusterParser.RULE_funcAssign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncAssign" ):
                return visitor.visitFuncAssign(self)
            else:
                return visitor.visitChildren(self)




    def funcAssign(self):

        localctx = ClusterParser.FuncAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcAssign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(ClusterParser.FUNC)
            self.state = 108
            self.match(ClusterParser.ID)
            self.state = 109
            self.match(ClusterParser.LPAREN)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 110
                self.params()


            self.state = 113
            self.match(ClusterParser.RPAREN)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==38:
                self.state = 114
                self.match(ClusterParser.RETURNS)
                self.state = 115
                self.type_()


            self.state = 118
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ClusterParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(ClusterParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(ClusterParser.ExprContext,0)


        def type_(self):
            return self.getTypedRuleContext(ClusterParser.TypeContext,0)


        def getRuleIndex(self):
            return ClusterParser.RULE_varAssign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarAssign" ):
                return visitor.visitVarAssign(self)
            else:
                return visitor.visitChildren(self)




    def varAssign(self):

        localctx = ClusterParser.VarAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_varAssign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 120
                self.type_()


            self.state = 123
            self.match(ClusterParser.ID)
            self.state = 124
            self.match(ClusterParser.ASSIGN)
            self.state = 125
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ClusterParser.ExprContext,0)


        def getRuleIndex(self):
            return ClusterParser.RULE_arg

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = ClusterParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClusterParser.ArgContext)
            else:
                return self.getTypedRuleContext(ClusterParser.ArgContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ClusterParser.COMMA)
            else:
                return self.getToken(ClusterParser.COMMA, i)

        def getRuleIndex(self):
            return ClusterParser.RULE_args

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = ClusterParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.arg()
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 130
                self.match(ClusterParser.COMMA)
                self.state = 131
                self.arg()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(ClusterParser.TypeContext,0)


        def ID(self):
            return self.getToken(ClusterParser.ID, 0)

        def getRuleIndex(self):
            return ClusterParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = ClusterParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.type_()
            self.state = 138
            self.match(ClusterParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClusterParser.ParamContext)
            else:
                return self.getTypedRuleContext(ClusterParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ClusterParser.COMMA)
            else:
                return self.getToken(ClusterParser.COMMA, i)

        def getRuleIndex(self):
            return ClusterParser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = ClusterParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.param()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 141
                self.match(ClusterParser.COMMA)
                self.state = 142
                self.param()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ClusterParser.ID, 0)

        def LPAREN(self):
            return self.getToken(ClusterParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ClusterParser.RPAREN, 0)

        def args(self):
            return self.getTypedRuleContext(ClusterParser.ArgsContext,0)


        def getRuleIndex(self):
            return ClusterParser.RULE_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = ClusterParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(ClusterParser.ID)
            self.state = 149
            self.match(ClusterParser.LPAREN)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4563434880) != 0):
                self.state = 150
                self.args()


            self.state = 153
            self.match(ClusterParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ClusterParser.INT, 0)

        def FLOAT(self):
            return self.getToken(ClusterParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(ClusterParser.STRING, 0)

        def BOOL(self):
            return self.getToken(ClusterParser.BOOL, 0)

        def NIL(self):
            return self.getToken(ClusterParser.NIL, 0)

        def ID(self):
            return self.getToken(ClusterParser.ID, 0)

        def LPAREN(self):
            return self.getToken(ClusterParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(ClusterParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(ClusterParser.RPAREN, 0)

        def type_(self):
            return self.getTypedRuleContext(ClusterParser.TypeContext,0)


        def LBRACE(self):
            return self.getToken(ClusterParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ClusterParser.RBRACE, 0)

        def args(self):
            return self.getTypedRuleContext(ClusterParser.ArgsContext,0)


        def HEX(self):
            return self.getToken(ClusterParser.HEX, 0)

        def getRuleIndex(self):
            return ClusterParser.RULE_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = ClusterParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_atom)
        self._la = 0 # Token type
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.match(ClusterParser.INT)
                pass
